--- a/usr.bin/colcrt/Attic/colcrt.1
+++ b/usr.bin/colcrt/Attic/colcrt.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: colcrt.1,v 1.9 2003/06/03 02:56:07 millert Exp $
+.\"	$OpenBSD: colcrt.1,v 1.10 2003/07/15 10:53:01 jmc Exp $
 .\"	$NetBSD: colcrt.1,v 1.3 1995/03/26 05:30:59 glass Exp $
 .\"
 .\" Copyright (c) 1980, 1990, 1993
@@ -35,7 +35,7 @@
 .Os
 .Sh NAME
 .Nm colcrt
-.Nd filter nroff output for CRT previewing
+.Nd filter nroff output
 .Sh SYNOPSIS
 .Nm colcrt
 .Op Fl
