--- a/sbin/ipsecctl/ipsec.conf.5
+++ b/sbin/ipsecctl/ipsec.conf.5
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: ipsec.conf.5,v 1.50 2006/06/02 06:43:05 jmc Exp $
+.\"	$OpenBSD: ipsec.conf.5,v 1.51 2006/06/02 15:56:55 naddy Exp $
 .\"
 .\" Copyright (c) 2004 Mathieu Sauve-Frankel  All rights reserved.
 .\"
@@ -388,7 +388,7 @@ is specified, negotiation will be started at once.
 The
 .Ar dynamic
 mode will additionally enable Dead Peer Detection (DPD) and use the
-local hostname as the identity of the local peer, if not specifed by
+local hostname as the identity of the local peer, if not specified by
 the
 .Ar srcid
 parameter.
