--- a/sbin/ipsecctl/ipsec.conf.5
+++ b/sbin/ipsecctl/ipsec.conf.5
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: ipsec.conf.5,v 1.53 2006/06/08 21:15:21 naddy Exp $
+.\"	$OpenBSD: ipsec.conf.5,v 1.54 2006/06/11 11:13:40 hshoexer Exp $
 .\"
 .\" Copyright (c) 2004 Mathieu Sauve-Frankel  All rights reserved.
 .\"
@@ -306,7 +306,7 @@ and
 If no algorithm is specified,
 .Xr ipsecctl 8
 will choose
-.Ar aesctr
+.Ar aes
 by default.
 .It Xo
 .Ic authkey
