--- a/sbin/init/init.8
+++ b/sbin/init/init.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: init.8,v 1.33 2004/02/24 13:14:29 jmc Exp $
+.\"	$OpenBSD: init.8,v 1.34 2005/12/10 22:17:55 jmc Exp $
 .\"	$NetBSD: init.8,v 1.6 1995/03/18 14:56:31 cgd Exp $
 .\"
 .\" Copyright (c) 1980, 1991, 1993
@@ -217,7 +217,14 @@ run
 .Pa /etc/rc.shutdown ,
 and halt the machine if user-defined signal 1
 .Pq Dv USR1
+or user-defined signal 2
+.Pd Dv USR2
 is received.
+.Pa /etc/rc.shutdown
+can specify that a powerdown is requested.
+Alternatively,
+.Dv USR2
+specifically requests a powerdown.
 .Pp
 The role of
 .Nm
