--- a/usr.bin/comm/comm.1
+++ b/usr.bin/comm/comm.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: comm.1,v 1.8 2002/01/25 19:57:46 mickey Exp $
+.\"	$OpenBSD: comm.1,v 1.9 2003/06/03 02:56:07 millert Exp $
 .\"	$NetBSD: comm.1,v 1.4 1995/03/26 09:25:50 glass Exp $
 .\"
 .\" Copyright (c) 1989, 1990, 1993
@@ -104,7 +104,11 @@ utility exits 0 on success or >0 if an error occurred.
 The
 .Nm
 utility conforms to
-.St -p1003.2-92 .
+.St -p1003.1-2004 .
+.Pp
+The flag
+.Op Fl f
+is an extension to the specification.
 .Sh HISTORY
 A
 .Nm
