--- a/share/man/man4/man4.sparc64/clock.4
+++ b/share/man/man4/man4.sparc64/clock.4
@@ -1,4 +1,4 @@
-.\"     $OpenBSD: clock.4,v 1.2 2004/09/23 20:12:59 jmc Exp $
+.\"     $OpenBSD: clock.4,v 1.3 2004/09/24 07:04:15 miod Exp $
 .\"
 .\" Copyright (c) 2004 Jason L. Wright (jason@thought.net)
 .\" All rights reserved.
@@ -33,7 +33,7 @@
 .Sh SYNOPSIS
 .Cd "clock* at sbus?"
 .Cd "clock* at ebus?"
-.Cd "clock* at fhc?"
+.Cd "clock0 at fhc0"
 .Cd "rtc* at ebus?"
 .Sh DESCRIPTION
 The
