--- a/bin/mkdir/mkdir.1
+++ b/bin/mkdir/mkdir.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: mkdir.1,v 1.19 2004/12/13 15:50:02 jmc Exp $
+.\"	$OpenBSD: mkdir.1,v 1.20 2004/12/13 16:02:40 jmc Exp $
 .\"	$NetBSD: mkdir.1,v 1.9 1995/07/25 19:37:13 jtc Exp $
 .\"
 .\" Copyright (c) 1989, 1990, 1993
@@ -108,6 +108,7 @@ creating any non-existent intermediate directories as necessary:
 .Sh SEE ALSO
 .Xr chmod 1 ,
 .Xr rmdir 1 ,
+.Xr mkdir 2 ,
 .Xr umask 2 ,
 .Xr hier 7
 .Sh STANDARDS
