--- a/share/man/man4/man4.vax/ze.4
+++ b/share/man/man4/man4.vax/ze.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: ze.4,v 1.8 2003/11/09 16:06:07 jmc Exp $
+.\"	$OpenBSD: ze.4,v 1.9 2004/08/15 22:52:41 jmc Exp $
 .\"
 .\" Copyright (c) 2000 Brandon Creighton
 .\"
@@ -32,6 +32,7 @@
 .Sh SYNOPSIS
 .Cd "ze* at ibus?                    " Pq "MicroVAX, VAX 4000"
 .Cd "ze* at vsbus0 csr 0x20008000    " Pq "VAXstation onboard"
+.Cd "ze* at vxtbus0                  " Pq "VXT2000"
 .Sh DESCRIPTION
 The
 .Nm
