--- a/share/man/man4/man4.vax/smg.4
+++ b/share/man/man4/man4.vax/smg.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: smg.4,v 1.4 2003/06/06 10:29:42 jmc Exp $
+.\"	$OpenBSD: smg.4,v 1.5 2006/07/28 21:25:21 miod Exp $
 .\"
 .\" Copyright (c) 2003 Jason L. Wright (jason@thought.net)
 .\" All rights reserved.
@@ -29,7 +29,7 @@
 .Os
 .Sh NAME
 .Nm smg
-.Nd small monochrome graphics adapter
+.Nd Small Monochrome Graphics frame buffer
 .Sh SYNOPSIS
 .Cd "smg0 at vsbus0 csr 0x200f0000"
 .Cd "wsdisplay* at smg?"
