--- a/share/man/man4/man4.sparc/le.4
+++ b/share/man/man4/man4.sparc/le.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: le.4,v 1.19 2004/03/31 08:33:56 jmc Exp $
+.\"	$OpenBSD: le.4,v 1.20 2004/09/30 19:59:27 mickey Exp $
 .\" Copyright (c) 1992, 1993
 .\"	The Regents of the University of California.  All rights reserved.
 .\"
@@ -38,7 +38,7 @@
 .Os
 .Sh NAME
 .Nm le
-.Nd AMD LANCE Ethernet interface
+.Nd AMD LANCE Ethernet device
 .Sh SYNOPSIS
 .Cd "le0 at sbus0                            " Pq "sun4c onboard"
 .Cd "le* at sbus?                            " Pq Sbus
