--- a/share/man/man4/man4.sparc/qe.4
+++ b/share/man/man4/man4.sparc/qe.4
@@ -1,4 +1,4 @@
-.\"     $OpenBSD: qe.4,v 1.8 2004/09/30 19:59:27 mickey Exp $
+.\"     $OpenBSD: qe.4,v 1.9 2006/03/11 23:05:19 martin Exp $
 .\"
 .\" Copyright (c) 1998 Jason L. Wright (jason@thought.net)
 .\" All rights reserved.
@@ -29,7 +29,7 @@
 .Os
 .Sh NAME
 .Nm qe
-.Nd SPARC Fast Ethernet interface
+.Nd SPARC 10/100 Ethernet device
 .Sh SYNOPSIS
 .Cd "qec* at sbus?   " Pq "sun4c/sun4m"
 .Cd "qe* at qec?     " Pq "sun4c/sun4m"
