--- a/share/man/man4/man4.sgi/mec.4
+++ b/share/man/man4/man4.sgi/mec.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: mec.4,v 1.3 2004/08/27 13:30:57 miod Exp $
+.\"	$OpenBSD: mec.4,v 1.4 2005/01/08 23:54:38 jmc Exp $
 .\"
 .\"	Written by Michael Shalayeff, 2004. Public Domain.
 .\"
@@ -7,7 +7,7 @@
 .Os
 .Sh NAME
 .Nm mec
-.Nd MAC-110 Ethernet controller
+.Nd MAC-110 10/100 Ethernet device
 .Sh SYNOPSIS
 .Cd "mec0 at macebus0 sys 0x18 base 0x00280000 irq 4"
 .Sh DESCRIPTION
