--- a/share/man/man4/man4.vax/le.4
+++ b/share/man/man4/man4.vax/le.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: le.4,v 1.9 2004/03/31 08:33:56 jmc Exp $
+.\"	$OpenBSD: le.4,v 1.10 2004/04/16 21:23:08 jmc Exp $
 .\"
 .\" Copyright (c) 2000 Brandon Creighton
 .\"
@@ -28,7 +28,7 @@
 .Os
 .Sh NAME
 .Nm le
-.Nd AMD LANCE Ethernet interface
+.Nd AMD LANCE Ethernet device
 .Sh SYNOPSIS
 .Cd "le* at vsbus? csr 0x200e0000    " Pq "VAXstation onboard"
 .Cd "le* at ibus?                    " Pq "MicroVAX ibus"
