--- a/share/man/man4/man4.sparc/audiocs.4
+++ b/share/man/man4/man4.sparc/audiocs.4
@@ -1,4 +1,4 @@
-.\"     $OpenBSD: audiocs.4,v 1.6 2003/06/02 18:51:34 jason Exp $
+.\"     $OpenBSD: audiocs.4,v 1.7 2004/09/30 19:59:27 mickey Exp $
 .\"
 .\" Copyright (c) 1999 Jason L. Wright (jason@thought.net)
 .\" All rights reserved.
@@ -29,7 +29,7 @@
 .Os
 .Sh NAME
 .Nm audiocs
-.Nd SPARC CS4231 audio interface
+.Nd SPARC CS4231 audio device
 .Sh SYNOPSIS
 .Cd "audiocs0 at sbus0 " Pq "sun4m"
 .Cd "audio*  at audiocs?"
