--- a/share/man/man4/man4.sparc64/audioce.4
+++ b/share/man/man4/man4.sparc64/audioce.4
@@ -1,4 +1,4 @@
-.\"     $OpenBSD: audioce.4,v 1.2 2002/10/01 21:03:27 miod Exp $
+.\"     $OpenBSD: audioce.4,v 1.3 2003/06/02 18:51:34 jason Exp $
 .\"
 .\" Copyright (c) 2001 Jason L. Wright (jason@thought.net)
 .\" All rights reserved.
@@ -29,7 +29,7 @@
 .Os
 .Sh NAME
 .Nm audioce
-.Nd SPARC64 EBus CS4231 audio interface
+.Nd SPARC64 EBus CS4231 audio device
 .Sh SYNOPSIS
 .Cd "audioce* at ebus?"
 .Cd "audio* at audioce?"
