--- a/share/man/man4/man4.sparc64/audiocs.4
+++ b/share/man/man4/man4.sparc64/audiocs.4
@@ -1,4 +1,4 @@
-.\"     $OpenBSD: audiocs.4,v 1.5 2003/06/02 18:51:34 jason Exp $
+.\"     $OpenBSD: audiocs.4,v 1.6 2004/09/30 19:59:28 mickey Exp $
 .\"
 .\" Copyright (c) 2001 Jason L. Wright (jason@thought.net)
 .\" All rights reserved.
@@ -29,7 +29,7 @@
 .Os
 .Sh NAME
 .Nm audiocs
-.Nd SPARC64 SBus CS4231 audio interface
+.Nd SPARC64 SBus CS4231 audio device
 .Sh SYNOPSIS
 .Cd "audiocs* at sbus?"
 .Cd "audio*  at audiocs?"
