--- a/share/man/man4/man4.zaurus/zaudio.4
+++ b/share/man/man4/man4.zaurus/zaudio.4
@@ -1,4 +1,4 @@
-.\" $OpenBSD: zaudio.4,v 1.1 2005/04/15 06:54:06 dlg Exp $
+.\" $OpenBSD: zaudio.4,v 1.2 2005/05/23 22:59:04 dlg Exp $
 .\"
 .\" Copyright (c) 2005 David Gwynne <dlg@openbsd.org>
 .\"
@@ -19,7 +19,7 @@
 .Os
 .Sh NAME
 .Nm zaudio
-.Nd Zaurus sound driver
+.Nd Zaurus audio device
 .Sh SYNOPSIS
 .Cd "zaudio0 at pxaip?"
 .Cd "audio* at zaudio?"
