--- a/share/man/man4/man4.sparc64/intro.4
+++ b/share/man/man4/man4.sparc64/intro.4
@@ -1,4 +1,4 @@
-.\"     $OpenBSD: intro.4,v 1.52 2006/09/08 09:25:53 jmc Exp $
+.\"     $OpenBSD: intro.4,v 1.53 2006/09/08 12:53:50 jmc Exp $
 .\"
 .\" Copyright (c) 2001-2002 The OpenBSD Project
 .\" All Rights Reserved.
@@ -73,6 +73,8 @@ man page.
 The following busses and controllers list these devices:
 .Pp
 .Bl -tag -width "cardbus(4)XX" -offset 3n -compact
+.It Xr ebus 4
+introduction to SPARC EBus bus support
 .It Xr pci 4
 introduction to PCI bus support
 .It Xr pcmcia 4
