--- a/share/man/man4/man4.sparc/qec.4
+++ b/share/man/man4/man4.sparc/qec.4
@@ -1,4 +1,4 @@
-.\"     $OpenBSD: qec.4,v 1.14 2004/08/15 22:52:41 jmc Exp $
+.\"     $OpenBSD: qec.4,v 1.15 2004/09/30 19:59:27 mickey Exp $
 .\"
 .\" Copyright (c) 1998 Jason L. Wright (jason@thought.net)
 .\" All rights reserved.
@@ -37,7 +37,7 @@
 .Sh DESCRIPTION
 The
 .Nm
-driver is an sbus controller that can contain either one
+driver is an SBus controller that can contain either one
 .Xr be 4
 Ethernet controller (Sun part number SUNW,501-2655)
 or four
