--- a/sbin/ipsecctl/ipsec.conf.5
+++ b/sbin/ipsecctl/ipsec.conf.5
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: ipsec.conf.5,v 1.91 2006/09/12 13:29:39 jmc Exp $
+.\"	$OpenBSD: ipsec.conf.5,v 1.92 2006/09/12 15:20:58 jmc Exp $
 .\"
 .\" Copyright (c) 2004 Mathieu Sauve-Frankel  All rights reserved.
 .\"
@@ -688,8 +688,8 @@ and networks 10.0.1.0/24 and 10.0.2.0/24,
 are permitted.
 .Bd -literal -offset indent
 block on enc0
-pass in on enc0 from 192.168.3.2 to 192.168.3.1
-pass out on enc0 from 192.168.3.1 to 192.168.3.2
+pass in on enc0 proto ipencap from 192.168.3.2 to 192.168.3.1
+pass out on enc0 proto ipencap from 192.168.3.1 to 192.168.3.2
 pass in on enc0 from 10.0.2.0/24 to 10.0.1.0/24
 pass out on enc0 from 10.0.1.0/24 to 10.0.2.0/24
 .Ed
