--- a/share/man/man4/man4.vax/Attic/hp.4
+++ b/share/man/man4/man4.vax/Attic/hp.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: hp.4,v 1.13 2003/07/09 13:26:20 jmc Exp $
+.\"	$OpenBSD: hp.4,v 1.14 2004/09/30 19:59:28 mickey Exp $
 .\"	$NetBSD: hp.4,v 1.4 1996/03/05 15:28:50 ragge Exp $
 .\"
 .\" Copyright (c) 1980,1988, 1991 Regents of the University of California.
@@ -155,7 +155,7 @@ driver showed up in
 .Nx 1.1a .
 .Sh BUGS
 .Tn DEC Ns -standard
-.Xr bad144 8
+bad144
 bad-block handling should be used.
 .Pp
 .Tn DEC Ns -standard
