--- a/share/man/man4/man4.sparc64/esp.4
+++ b/share/man/man4/man4.sparc64/esp.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: esp.4,v 1.6 2004/09/30 19:59:28 mickey Exp $
+.\"	$OpenBSD: esp.4,v 1.7 2006/06/26 22:16:23 miod Exp $
 .\"
 .\" Copyright (c) 1998 The OpenBSD Project
 .\" All rights reserved.
@@ -9,7 +9,7 @@
 .Os
 .Sh NAME
 .Nm esp
-.Nd ESP NCR 53c94 on-board or SBus SCSI controller
+.Nd ESP NCR 53c94 on-board or SBus SCSI interface
 .Sh SYNOPSIS
 .Cd "dma* at sbus?              " Pq "SBus SCSI"
 .Cd "esp* at dma?               " Pq "two flavours"
