--- a/sbin/ipsecctl/ipsec.conf.5
+++ b/sbin/ipsecctl/ipsec.conf.5
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: ipsec.conf.5,v 1.99 2006/09/26 22:03:44 jmc Exp $
+.\"	$OpenBSD: ipsec.conf.5,v 1.100 2006/09/29 10:51:27 jmc Exp $
 .\"
 .\" Copyright (c) 2004 Mathieu Sauve-Frankel  All rights reserved.
 .\"
@@ -105,10 +105,7 @@ manual keying.
 Manual keying is not recommended,
 but can be convenient for quick setups and testing.
 Those procedures are documented within this page.
-.Pp
-.Nm
-has the following format:
-.Pp
+.Sh IPSEC.CONF FILE FORMAT
 Lines beginning with
 .Sq #
 and empty lines are regarded as comments,
