--- a/share/man/man5/port-modules.5
+++ b/share/man/man5/port-modules.5
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: port-modules.5,v 1.19 2008/10/22 18:15:04 steven Exp $
+.\"	$OpenBSD: port-modules.5,v 1.20 2008/10/24 14:15:53 bernd Exp $
 .\"
 .\" Copyright (c) 2008 Marc Espie
 .\"
@@ -24,7 +24,7 @@
 .\" (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
 .\" THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd $Mdocdate: October 22 2008 $
+.Dd $Mdocdate: October 24 2008 $
 .Dt PORT-MODULES 5
 .Os
 .Sh NAME
@@ -348,6 +348,9 @@ of regress tests to CPAN.
 .It devel/pmk
 .It devel/scons
 .It devel/waf
+Adds devel/waf to BUILD_DEPENDS, lang/python to MODULES, and provides
+do-configure, do-build, do-install and post-install targets. do-build,
+do-install and post-install can be overridden in the port Makefile.
 .It gcc3
 If USE_GCC3=Yes, and architecture is in MODGCC3_ARCHES, then the gcc 3.3.6
 compilers will be put at the front of the path.
