--- a/share/man/man5/port-modules.5
+++ b/share/man/man5/port-modules.5
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: port-modules.5,v 1.21 2008/10/26 12:36:58 landry Exp $
+.\"	$OpenBSD: port-modules.5,v 1.22 2008/10/26 15:10:03 jmc Exp $
 .\"
 .\" Copyright (c) 2008 Marc Espie
 .\"
@@ -353,11 +353,13 @@ do-configure, do-build, do-install and post-install targets.
 do-build, do-install and post-install can be overridden in the port
 Makefile.
 .It gcc3
-If USE_GCC3=Yes, and architecture is in MODGCC3_ARCHES, then the gcc 3.3.6
-compilers will be put at the front of the path.
+If USE_GCC3=Yes (which the module sets by default), and architecture is in
+MODGCC3_ARCHES, then the gcc 3.3.6 compilers will be put at the front of
+the path.
 .It gcc4
-If USE_GCC4=Yes, and architecture is in MODGCC4_ARCHES, then the gcc 4.2
-compilers will be put at the front of the path.
+If USE_GCC4=Yes (which the module sets by default), and architecture is in
+MODGCC4_ARCHES, then the gcc 4.2 compilers will be put at the front of
+the path.
 .It gnu
 This module is documented in the main
 .Xr bsd.port.mk 5
