--- a/share/man/man5/bsd.port.mk.5
+++ b/share/man/man5/bsd.port.mk.5
@@ -1,4 +1,4 @@
-.\" $OpenBSD: bsd.port.mk.5,v 1.223 2008/10/26 15:21:46 espie Exp $
+.\" $OpenBSD: bsd.port.mk.5,v 1.224 2008/10/26 19:30:18 jmc Exp $
 .\"
 .\" Copyright (c) 2000-2008 Marc Espie
 .\"
@@ -2660,6 +2660,7 @@ non-flavor version if there is no flavor-specific file around.
 .Xr ftp 1 ,
 .Xr pkg_add 1 ,
 .Xr pkg_create 1 ,
+.Xr OpenBSD::Intro 3p ,
 .Xr port-modules 5 ,
 .Xr library-specs 7 ,
 .Xr mirroring-ports 7 ,
