--- a/share/man/man5/port-modules.5
+++ b/share/man/man5/port-modules.5
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: port-modules.5,v 1.24 2008/10/28 13:29:55 ajacoutot Exp $
+.\"	$OpenBSD: port-modules.5,v 1.25 2008/10/28 14:10:46 steven Exp $
 .\"
 .\" Copyright (c) 2008 Marc Espie
 .\"
@@ -354,8 +354,8 @@ do-build, do-install and post-install can be overridden in the port
 Makefile.
 .It gcc3
 If USE_GCC3=No (defined by
-.Pa /usr/share/mk/bsd.own.mk )
-, and architecture is in MODGCC3_ARCHES, then the gcc 3.3.6
+.Pa /usr/share/mk/bsd.own.mk ) ,
+and architecture is in MODGCC3_ARCHES, then the gcc 3.3.6
 compilers will be put at the front of the path.
 By default, only C language support is included by this module.
 If other languages are needed, they must be listed in MODGCC3_LANGS
