--- a/share/man/man5/port-modules.5
+++ b/share/man/man5/port-modules.5
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: port-modules.5,v 1.31 2008/11/17 15:22:40 jasper Exp $
+.\"	$OpenBSD: port-modules.5,v 1.32 2008/11/17 15:29:07 jasper Exp $
 .\"
 .\" Copyright (c) 2008 Marc Espie
 .\"
@@ -473,7 +473,7 @@ MODTK_CONFIG.
 Automatically adds the lang/tcl module, and affects CATEGORIES,
 SUBST_VARS, and USE_X11.
 .It x11/xfce4
-Sets CATEGORIES, DIST_SUBDIR, EXTRACT_SUFX, CONFIGURE_STYLE,
+Sets DIST_SUBDIR, EXTRACT_SUFX, CONFIGURE_STYLE,
 CONFIGURE_ENV, USE_X11 and USE_GMAKE.
 If DESKTOP_FILES is set to yes, it adds
 .Pa devel/desktop-file-utils
@@ -483,6 +483,7 @@ Unless XFCE_NO_SRC is set, USE_LIBTOOL is set to yes and
 and
 .Pa textproc/intltool
 are added to MODULES.
+Also affects CATEGORIES.
 .Pp
 Xfce ports can be divided into three categories: core libraries and
 applications, goodies, and panel plugins.
