--- a/bin/pax/pax.1
+++ b/bin/pax/pax.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: pax.1,v 1.56 2009/02/08 17:33:01 jmc Exp $
+.\"	$OpenBSD: pax.1,v 1.57 2009/08/05 13:38:05 martynas Exp $
 .\"	$NetBSD: pax.1,v 1.3 1995/03/21 09:07:37 cgd Exp $
 .\"
 .\" Copyright (c) 1992 Keith Muller.
@@ -34,7 +34,7 @@
 .\"
 .\"	@(#)pax.1	8.4 (Berkeley) 4/18/94
 .\"
-.Dd $Mdocdate: February 8 2009 $
+.Dd $Mdocdate: August 5 2009 $
 .Dt PAX 1
 .Os
 .Sh NAME
@@ -75,7 +75,7 @@
 .Op Fl T Ar range
 .Op Fl U Ar user
 .Op Fl x Ar format
-.Op Ar file ...
+.Op Ar
 .Nm pax
 .Fl rw
 .Op Fl 0DdHijkLlnOPtuvXYZ
@@ -84,7 +84,7 @@
 .Op Fl s Ar replstr
 .Op Fl T Ar range
 .Op Fl U Ar user
-.Op Ar file ...
+.Op Ar
 .Ar directory
 .Ek
 .Sh DESCRIPTION
