--- a/bin/md5/cksum.1
+++ b/bin/md5/cksum.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: cksum.1,v 1.18 2008/07/29 18:24:31 sobrado Exp $
+.\"	$OpenBSD: cksum.1,v 1.19 2009/02/08 17:15:09 jmc Exp $
 .\"
 .\" Copyright (c) 1991, 1993
 .\"	The Regents of the University of California.  All rights reserved.
@@ -32,7 +32,7 @@
 .\"
 .\"	@(#)cksum.1	8.2 (Berkeley) 4/28/95
 .\"
-.Dd $Mdocdate: July 29 2008 $
+.Dd $Mdocdate: February 8 2009 $
 .Dt CKSUM 1
 .Os
 .Sh NAME
@@ -47,7 +47,7 @@
 .Op Fl c Op Ar checklist ...
 .Op Fl o Ar 1 | 2
 .Op Fl s Ar string
-.Op Ar file ...
+.Op Ar
 .Ek
 .Nm sum
 .Op Fl bpqrtx
@@ -55,7 +55,7 @@
 .Op Fl c Op Ar checklist ...
 .Op Fl o Ar 1 | 2
 .Op Fl s Ar string
-.Op Ar file ...
+.Op Ar
 .Sh DESCRIPTION
 The
 .Nm cksum
