--- a/share/man/man4/man4.sgi/xbridge.4
+++ b/share/man/man4/man4.sgi/xbridge.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD$
+.\"	$OpenBSD: xbridge.4,v 1.1 2009/05/17 22:08:34 miod Exp $
 .\"
 .\" Copyright (c) 2009 Miodrag Vallat.
 .\"
@@ -14,7 +14,7 @@
 .\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd $Mdocdate$
+.Dd $Mdocdate: May 17 2009 $
 .Dt XBRIDGE 4 sgi
 .Os
 .Sh NAME
@@ -26,15 +26,15 @@
 .Sh DESCRIPTION
 The
 .Nm
-driver provides support for the XIO-PCI bridge commonly found on Octane
-and Origin family systems.
+driver provides support for the XIO-PCI and XIO-PCI-X bridges commonly found
+on Octane and Origin family systems.
 .Pp
 All these systems feature at least one
 .Nm
 device to which the on-board devices are connected.
 .Pp
 .Nm
-devices support up to 8 different PCI devices.
+devices support up to 8 different PCI devices, or 4 PCI-X devices.
 .Sh SEE ALSO
 .Xr intro 4 ,
 .Xr pci 4 ,
