--- a/share/man/man5/pf.conf.5
+++ b/share/man/man5/pf.conf.5
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: pf.conf.5,v 1.454 2009/09/07 11:28:34 jmc Exp $
+.\"	$OpenBSD: pf.conf.5,v 1.455 2009/09/07 12:21:10 reyk Exp $
 .\"
 .\" Copyright (c) 2002, Daniel Hartmeier
 .\" All rights reserved.
@@ -435,6 +435,12 @@ The implicit
 .Ar pass
 rule that is used when a packet does not match any rules does not
 allow IP options.
+.Pp
+.It Ar divert-packet Aq Ar port
+Used to send matching packets to
+.Xr divert 4
+sockets bound to port
+.Ar port .
 .Pp
 .It Ar divert-reply
 Used to receive replies for sockets that are bound to addresses
