--- a/share/man/man4/man4.sparc64/lom.4
+++ b/share/man/man4/man4.sparc64/lom.4
@@ -1,4 +1,4 @@
-.\"     $OpenBSD: lom.4,v 1.1 2009/09/21 19:51:04 kettenis Exp $
+.\"     $OpenBSD: lom.4,v 1.2 2009/09/21 22:35:52 kettenis Exp $
 .\"
 .\" Copyright (c) 2009 Mark Kettenis <kettenis@openbsd.org>
 .\"
@@ -19,7 +19,7 @@
 .Os
 .Sh NAME
 .Nm lom
-.Nd Lights Out Management
+.Nd lights out management
 .Sh SYNOPSIS
 .Cd "lom* at ebus?"
 .Sh DESCRIPTION
@@ -48,9 +48,9 @@ system's hostname is changed.
 .Xr hostname 1 ,
 .Xr ebus 4 ,
 .Xr intro 4 ,
+.Xr watchdog 4 ,
 .Xr sensorsd 8 ,
 .Xr sysctl 8
-.Xr watchdog 8
 .Sh HISTORY
 The
 .Nm
