--- a/share/man/man4/man4.sgi/iockbc.4
+++ b/share/man/man4/man4.sgi/iockbc.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD$
+.\"	$OpenBSD: iockbc.4,v 1.1 2009/11/10 15:50:10 jsing Exp $
 .\"
 .\" Copyright (c) 2009 Joel Sing <jsing@openbsd.org>
 .\"
@@ -14,7 +14,7 @@
 .\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd $Mdocdate$
+.Dd $Mdocdate: November 10 2009 $
 .Dt IOCKBC 4 sgi
 .Os
 .Sh NAME
@@ -43,4 +43,4 @@ driver first appeared in
 The
 .Nm
 driver was written by
-.An Joel Sing.
+.An Joel Sing .
