--- a/share/man/man4/man4.sgi/iockbc.4
+++ b/share/man/man4/man4.sgi/iockbc.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: iockbc.4,v 1.1 2009/11/10 15:50:10 jsing Exp $
+.\"	$OpenBSD: iockbc.4,v 1.2 2009/11/10 19:25:25 jmc Exp $
 .\"
 .\" Copyright (c) 2009 Joel Sing <jsing@openbsd.org>
 .\"
@@ -22,6 +22,7 @@
 .Nd IOC PS/2 keyboard and mouse interface
 .Sh SYNOPSIS
 .Cd "iockbc* at ioc?"
+.Cd "iockbc* at iof?"
 .Cd "pckbd* at iockbc?"
 .Cd "pms* at iockbc?"
 .Sh DESCRIPTION
@@ -29,9 +30,12 @@ The
 .Nm
 driver provides support for the keyboard and mouse interface found on
 .Xr ioc 4
+and
+.Xr iof 4
 devices.
 .Sh SEE ALSO
 .Xr ioc 4 ,
+.Xr iof 4 ,
 .Xr pckbd 4 ,
 .Xr pms 4
 .Sh HISTORY
