--- a/share/man/man4/man4.sparc/tcx.4
+++ b/share/man/man4/man4.sparc/tcx.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: tcx.4,v 1.31 2008/06/26 05:42:07 ray Exp $
+.\"	$OpenBSD: tcx.4,v 1.32 2008/12/24 16:12:01 miod Exp $
 .\"	$NetBSD: tcx.4,v 1.3 1997/10/08 22:00:14 jtc Exp $
 .\"
 .\" Copyright (c) 1996 The NetBSD Foundation, Inc.
@@ -28,7 +28,7 @@
 .\" ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 .\" POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd $Mdocdate: March 31 2008 $
+.Dd $Mdocdate: December 24 2008 $
 .Dt TCX 4 sparc
 .Os
 .Sh NAME
@@ -141,7 +141,7 @@ setenv
 screen:r1024x800x94
 .El
 .Pp
-to change to a 85Hz 1024x800 resolution.
+to change to an 85Hz 1024x800 resolution.
 Note that setting
 .Em fcode-debug?
 is absolutely necessary for the resolution settings to be honoured.
