--- a/share/man/man4/man4.sparc64/cbus.4
+++ b/share/man/man4/man4.sparc64/cbus.4
@@ -1,4 +1,4 @@
-.\"     $OpenBSD: cbus.4,v 1.2 2009/01/13 07:42:51 jmc Exp $
+.\"     $OpenBSD: cbus.4,v 1.3 2009/05/12 19:53:34 jmc Exp $
 .\"
 .\" Copyright (c) 2009 Mark Kettenis <kettenis@openbsd.org>
 .\"
@@ -14,7 +14,7 @@
 .\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd $Mdocdate: January 13 2009 $
+.Dd $Mdocdate: May 12 2009 $
 .Dt CBUS 4 sparc64
 .Os
 .Sh NAME
@@ -38,6 +38,8 @@ virtual console concentrator
 virtual disk
 .It Xr vnet 4
 virtual network interface
+.It Xr vsw 4
+virtual network switch
 .El
 .Sh SEE ALSO
 .Xr intro 4 ,
