--- a/usr.bin/file/file.1
+++ b/usr.bin/file/file.1
@@ -1,4 +1,4 @@
-.\" $OpenBSD: file.1,v 1.29 2009/08/16 09:41:08 sobrado Exp $
+.\" $OpenBSD: file.1,v 1.30 2009/10/26 21:03:03 ajacoutot Exp $
 .\" $FreeBSD: src/usr.bin/file/file.1,v 1.16 2000/03/01 12:19:39 sheldonh Exp $
 .\"
 .\" Copyright (c) Ian F. Darwin 1986-1995.
@@ -27,7 +27,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.Dd $Mdocdate: August 16 2009 $
+.Dd $Mdocdate: October 26 2009 $
 .Dt FILE 1
 .Os
 .Sh NAME
@@ -199,7 +199,7 @@ Exclude the test named in
 .Ar testname
 from the list of tests made to determine the file type.
 Valid test names are:
-.Bl -tag -width
+.Bl -tag -width compress
 .It apptype
 Check for
 .Dv EMX
