--- a/usr.bin/getent/getent.1
+++ b/usr.bin/getent/getent.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: getent.1,v 1.5 2007/05/31 19:20:10 jmc Exp $
+.\"	$OpenBSD: getent.1,v 1.6 2008/06/26 05:42:21 ray Exp $
 .\"	$NetBSD: getent.1,v 1.13 2005/09/11 23:16:15 wiz Exp $
 .\"
 .\" Copyright (c) 2004 The NetBSD Foundation, Inc.
@@ -28,7 +28,7 @@
 .\" ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 .\" POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd $Mdocdate: May 31 2007 $
+.Dd $Mdocdate: June 26 2008 $
 .Dt GETENT 1
 .Os
 .Sh NAME
@@ -60,7 +60,7 @@ file format for that database.
 may be one of:
 .Pp
 .Bl -column "netgroup" -offset indent -compact
-.Sy Database Ta Sy Display format
+.It Sy Database Ta Sy Display format
 .It ethers Ta address name
 .It group Ta group:passwd:gid:[member[,member]...]
 .It hosts Ta address name [alias ...]
