--- a/usr.sbin/mrouted/mrouted.8
+++ b/usr.sbin/mrouted/mrouted.8
@@ -1,11 +1,11 @@
-.\"	$OpenBSD: mrouted.8,v 1.18 2007/05/31 19:20:26 jmc Exp $
+.\"	$OpenBSD: mrouted.8,v 1.19 2009/02/01 10:48:57 sobrado Exp $
 .\" The mrouted program is covered by the license in the accompanying file
 .\" named "LICENSE".  Use of the mrouted program represents acceptance of
 .\" the terms and conditions listed in that file.
 .\"
 .\" The mrouted program is COPYRIGHT 1989 by The Board of Trustees of
 .\" Leland Stanford Junior University.
-.Dd $Mdocdate: May 31 2007 $
+.Dd $Mdocdate: February 1 2009 $
 .Dt MROUTED 8
 .Os
 .Sh NAME
@@ -131,8 +131,8 @@ There are five types of configuration commands:
 .It [altnet <network>/<mask-len>]
 .El
 .It
-.Bl -tag -width flag -compact -offset indent
 .Tn tunnel <local-addr> <remote-addr> [metric <m>]
+.Bl -tag -width flag -compact -offset indent
 .It [threshold <t>] [rate_limit <b>]
 .It [boundary (<boundary-name>|<scoped-addr>/<mask-len>)]
 .El
