--- a/share/man/man5/pf.conf.5
+++ b/share/man/man5/pf.conf.5
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: pf.conf.5,v 1.469 2010/01/12 03:20:51 mcbride Exp $
+.\"	$OpenBSD: pf.conf.5,v 1.470 2010/01/12 18:42:36 jmc Exp $
 .\"
 .\" Copyright (c) 2002, Daniel Hartmeier
 .\" All rights reserved.
@@ -823,7 +823,7 @@ bound solely to the loopback address, circumventing the traditional
 blocking of such connections on a real interface.
 For example:
 .Bd -literal -offset indent
-pass on egress proto tcp from any to any port smtp \e
+pass in on egress proto tcp from any to any port smtp \e
 	rdr-to 127.0.0.1 port spamd
 .Ed
 .Pp
