--- a/bin/ksh/ksh.1
+++ b/bin/ksh/ksh.1
@@ -1,8 +1,8 @@
-.\"	$OpenBSD: ksh.1,v 1.129 2009/05/28 06:09:06 jmc Exp $
+.\"	$OpenBSD: ksh.1,v 1.130 2010/02/25 13:45:54 schwarze Exp $
 .\"
 .\"	Public Domain
 .\"
-.Dd $Mdocdate: May 28 2009 $
+.Dd $Mdocdate: February 25 2010 $
 .Dt KSH 1
 .Os
 .Sh NAME
@@ -1040,7 +1040,7 @@ form
 where
 .Ar expr
 is an arithmetic expression.
-Array indices are currently limited to the range 0 through 2047, inclusive.
+Array indices are currently limited to the range 0 through 10239, inclusive.
 Parameter substitutions take the form
 .Pf $ Ns Ar name ,
 .Pf ${ Ns Ar name Ns } ,
