--- a/share/man/man4/man4.sgi/gbe.4
+++ b/share/man/man4/man4.sgi/gbe.4
@@ -1,6 +1,6 @@
 .\"     $OpenBSD: gbe.4,v 1.5 2008/03/27 13:47:08 jsing Exp $
 .\"
-.\" Copyright (c) 2007, Joel Sing <jsing@openbsd.org>
+.\" Copyright (c) 2007, 2009, Joel Sing <jsing@openbsd.org>
 .\"
 .\" Permission to use, copy, modify, and distribute this software for any
 .\" purpose with or without fee is hereby granted, provided that the above
@@ -22,6 +22,7 @@
 .Nd SGI Graphics Back End (GBE) frame buffer
 .Sh SYNOPSIS
 .Cd "gbe0 at mainbus0"
+.Cd "wsdisplay* at gbe?"
 .Sh DESCRIPTION
 The
 .Nm
@@ -47,7 +48,7 @@ The
 .Nm
 driver was written by
 .An Joel Sing .
-.Sh BUGS
+.Sh CAVEATS
 Hardware initialization must currently be performed by the ARCS firmware.
 The resolution configured by the firmware will be used, with a fixed
 color depth of 8 bits.
