--- a/share/man/man4/man4.sgi/odyssey.4
+++ b/share/man/man4/man4.sgi/odyssey.4
@@ -1,4 +1,4 @@
-.\"     $OpenBSD$
+.\"     $OpenBSD: odyssey.4,v 1.1 2010/03/04 14:50:35 jsing Exp $
 .\"
 .\" Copyright (c) 2010 Joel Sing <jsing@openbsd.org>
 .\"
@@ -14,12 +14,12 @@
 .\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd $Mdocdate$
+.Dd $Mdocdate: March 4 2010 $
 .Dt ODYSSEY 4 sgi
 .Os
 .Sh NAME
 .Nm odyssey
-.Nd SGI VPro (aka Odyssey) graphics card driver
+.Nd SGI VPro (aka Odyssey) graphics
 .Sh SYNOPSIS
 .Cd "odyssey* at xbow?"
 .Cd "wsdisplay* at odyssey?"
