--- a/share/man/man4/man4.sgi/xbow.4
+++ b/share/man/man4/man4.sgi/xbow.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: xbow.4,v 1.2 2009/05/18 06:55:33 jmc Exp $
+.\"	$OpenBSD: xbow.4,v 1.4 2010/03/07 14:15:32 jsing Exp $
 .\"
 .\" Copyright (c) 2009 Miodrag Vallat.
 .\"
@@ -14,7 +14,7 @@
 .\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd $Mdocdate: May 18 2009 $
+.Dd $Mdocdate: March 7 2010 $
 .Dt XBOW 4 sgi
 .Os
 .Sh NAME
@@ -50,6 +50,8 @@ The widgets currently supported under
 are:
 .Pp
 .Bl -tag -width 10n -compact -offset indent
+.It Xr impact 4
+SGI Impact (aka Mardigras) graphics
 .It Xr odyssey 4
 SGI VPro (aka Odyssey) graphics
 .It Xr xbridge 4
