--- a/share/man/man5/pf.conf.5
+++ b/share/man/man5/pf.conf.5
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: pf.conf.5,v 1.473 2010/02/19 12:29:06 henning Exp $
+.\"	$OpenBSD: pf.conf.5,v 1.474 2010/03/18 21:49:20 jmc Exp $
 .\"
 .\" Copyright (c) 2002, Daniel Hartmeier
 .\" All rights reserved.
@@ -27,7 +27,7 @@
 .\" ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 .\" POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd $Mdocdate: February 19 2010 $
+.Dd $Mdocdate: March 18 2010 $
 .Dt PF.CONF 5
 .Os
 .Sh NAME
@@ -1116,7 +1116,6 @@ following order, to match the operation of the underlying packet
 filtering engine:
 .Em options ,
 .Em queueing ,
-.Em translation ,
 .Em filtering .
 This option is disabled by default.
 .It Ar set ruleset-optimization
