--- a/share/man/man5/elf.5
+++ b/share/man/man5/elf.5
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: elf.5,v 1.15 2007/05/31 19:19:58 jmc Exp $
+.\"	$OpenBSD: elf.5,v 1.16 2010/05/02 01:01:46 guenther Exp $
 .\"Copyright (c) 1999 Jeroen Ruigrok van der Werven
 .\"All rights reserved.
 .\"
@@ -25,7 +25,7 @@
 .\"
 .\"	$FreeBSD: src/share/man/man5/elf.5,v 1.21 2001/10/01 16:09:23 ru Exp $
 .\"
-.Dd $Mdocdate: May 31 2007 $
+.Dd $Mdocdate: May 2 2010 $
 .Dt ELF 5
 .Os
 .Sh NAME
@@ -157,7 +157,7 @@ the prefix
 and may contain values which start with the prefix
 .Sy ELF .
 The following macros are defined:
-.Bl -tag -width "EI_VERSION" \" EI_ABIVERSION
+.Bl -tag -width "EI_VERSION"
 .It Dv EI_MAG0
 The first byte of the magic number.
 It must be filled with
